<resources>
    <!-- Do not modify these in any case please -->
    <string name="app_name">Robotix_Club_v1</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="action_settings">Settings</string>
    <string name="FACEBOOK_APP_ID">116902165585116</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">dcd631e95dfb0fca1338bed225f05ae9</string>
    <string name="ak_login_protocol_scheme">ak116902165585116</string>
    <!-- ActionBar Strings  -->
    <string name="call_us">Call</string>
    <string name="logout">LogOut</string>
    <string name="AboutUs">About Us</string>
    <string name="action_home">Home</string>
    <string name="events">Events</string>
    <string name="login_email_label">Login with Email</string>
    <string name="login_phone_label">Login with Phone Number</string>
    <string name="account">Account</string>
    <string name="id_label">Account ID</string>
    <string name="phone_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="logout_label">Log Out</string>


    <!--Navigation Bar and ToolBar Strings -->
    <string name="phonenumber">7804944206</string>


    <!--For checking errors -->
    <string name="error_field_required">this field is required</string>
    <string name="error_invalid_email">Email is in valid</string>
    <!--About Us-->

    <string name="ourmission">Our Mission</string>
    <string name="ourgoal">Our Goal</string>
    <string name="ourvision">Our Vision</string>
    <string name="play">play</string>
    <string name="ourmentor">Our Mentor</string>
    <string name="aboutus">ABOUT US</string>
    <string name="website">www.robotixnitrr.org</string>
    <string name="transport">TRANSPORTS</string>
    <string name="missionstext">
        We at Robotix Club, invovle ourselves in
        various activities ranging from lectures to
        workshops and competitions. Our
        mission is to make robotics an everyday phenomenon
        and spread the knowledge about it.
</string>
    <string name="userid">""</string>
    <string name="visiontext">
        Robotics today is a field where a lot is
        happening. Not many things can be
        compared by a human brain. With a vision of
        involving as many students as it can,
        in various activities relating to a
        robot development, we continue to grow.

    </string>
    <string name="wor_new">Click to see new Workshops</string>
    <string name="goaltext">
        The ultimate goal of Robotix Club NIT
        Raipur is to educate maximum number of students.
        Create a hype of robotics.
        We want to participate in as many competitions as we can and keep learining all the while.
    </string>
    //events and workshop
    <string name="event">EVENTS AND WORKSHOP</string>
    <string name="ne_head">New in Robotics World</string>
    <string name="ne_ro">Click to see latest in robo World</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="click_to_see_enlarged_image">enlar_img</string>

    <string name="title_activity_fullscreen_image">FullscreenImage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
