<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/AboutUs"
        />

        <item
            android:title="@string/events"
            android:id="@+id/nav_events" />
        <item
            android:title="Workshop"
            android:id="@+id/nav_workshops"
            />
        <item
        android:title="@string/logout"
        android:id="@+id/logout" />


    </group>



    <item android:title="Communicate">
        <menu>
            <item

                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/call_us" />
        </menu>
    </item>

</menu>
