<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"  >
            <TextView

                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"

                android:text="@string/aboutus"
                android:textSize="44dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></LinearLayout>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download"
                />



            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ourmission"
                android:textSize="22dp"
                android:gravity="center_horizontal"

                android:id="@+id/aboutus"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/backoftext" />
                <TextView
                    android:layout_margin="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/missionstext"

                    />

            </RelativeLayout>



            <ImageView

                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ourvision"
                android:textSize="22dp"
                android:gravity="center_horizontal"

                android:id="@+id/aboutus2"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <ImageView
                    android:id="@+id/imageView34"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/backoftext"/>

                <TextView
                    android:layout_margin="25dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/visiontext"

                    />

            </RelativeLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ourgoal"
                android:textSize="22dp"
                android:gravity="center_horizontal"

                android:id="@+id/abouts2"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/backoftext"/>
                <TextView
                    android:layout_margin="25dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/goaltext"

                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"


                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ourmentor"
                android:textStyle="bold"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"/>
            <ImageView

                android:layout_width="match_parent"
                android:layout_height="130dp"

                android:scaleType="center"
                android:src="@drawable/backoftext"/>

            <TextView
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website"
                />




        </LinearLayout>
    </ScrollView>
</LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>